--- a/src/css/style.css
+++ b/src/css/style.css
@@ -170,20 +170,32 @@ section {
     color:white;
     font-size: 1.5rem;
 }
+.suggestion-item {
+    position: relative;
+}
+.suggestion-img{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    filter: brightness(50%);
+    object-fit: cover;
+    object-position: top;
+}
 .suggestion-item-content {
     display: flex;
     flex-direction: column;
     justify-content: center;
     row-gap: 2rem;
     padding: 1rem;
-    background-color: #7F7F7F;
     color:white;
     width: 15rem;
     height: 10rem;
     font-size: 0.8rem;
+    position: relative;
 }
 .suggestion-item-content h3 {
-    font-size: 2rem;
+    font-size: 1.5rem;
+    color:white;
 }
 .suggestion-item-content .suggestion-details {
     display: flex;
